Bug 442201 - Mesh Gradient's color stop icon confuses with shape control point icon, they are both a white square icon
Summary: Mesh Gradient's color stop icon confuses with shape control point icon, they ...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Vector (other bugs)
Version First Reported In: 5.0.0-beta1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: sh_zam
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-09 03:20 UTC by Tyson Tan
Modified: 2021-11-19 16:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tyson Tan 2021-09-09 03:20:27 UTC
The Mesh Gradient mode in Shape Select Tool's Fill tab has a default Rows and Columns value of 1x1. It is useless in this state -- you can't even assign a color stop! New users would be confused to think this option is broken.

I recommend to set the default value to 3x3 -- that's a minimum version of what most people consider a mesh.

While we are here, I also recommend to change the color stop icon to a yellow diamond, just like what's in the Gradient mode next to it. This will help artists to differentiate them with the shape control point icon, which is also a square at the moment.
Comment 1 Tyson Tan 2021-09-09 03:28:30 UTC
Ah, there are color stops on the corners even when it is 1x1!

So it's just too easy to confuse the color stop points with the shape control points.

Then I will change the bug solely about changing the color stop icon to a yellow diamond.
Comment 2 Halla Rempt 2021-09-09 08:23:25 UTC
Sharaf, can you take a look?
Comment 3 sh_zam 2021-10-01 12:27:36 UTC
Git commit bea8ca5074d9b14d0673294e70268442abc83f4a by Sharaf Zaman.
Committed on 01/10/2021 at 12:26.
Pushed by szaman into branch 'master'.

Make Mesh Gradient handles more consistent with mesh transform

M  +14   -0    plugins/tools/defaulttool/defaulttool/KoShapeMeshGradientHandles.cpp
M  +3    -0    plugins/tools/defaulttool/defaulttool/KoShapeMeshGradientHandles.h
M  +6    -4    plugins/tools/defaulttool/defaulttool/SelectionDecorator.cpp

https://invent.kde.org/graphics/krita/commit/bea8ca5074d9b14d0673294e70268442abc83f4a
Comment 4 sh_zam 2021-11-19 16:00:14 UTC
Git commit 252a9b38c971f2e0b606bfc6f24ad6a88d719a3b by Sharaf Zaman.
Committed on 19/11/2021 at 15:59.
Pushed by szaman into branch 'master'.

Fix improper handle placement for mesh gradients..

..when in alternate units.

M  +9    -1    plugins/tools/defaulttool/defaulttool/KoShapeMeshGradientHandles.cpp

https://invent.kde.org/graphics/krita/commit/252a9b38c971f2e0b606bfc6f24ad6a88d719a3b
Comment 5 sh_zam 2021-11-19 16:00:32 UTC
Git commit 0ebb72689133fae01b45d4d8be7b48e2595895b3 by Sharaf Zaman.
Committed on 19/11/2021 at 15:56.
Pushed by szaman into branch 'krita/5.0'.

Make Mesh Gradient handles more consistent with mesh transform
(cherry picked from commit bea8ca5074d9b14d0673294e70268442abc83f4a)

M  +14   -0    plugins/tools/defaulttool/defaulttool/KoShapeMeshGradientHandles.cpp
M  +3    -0    plugins/tools/defaulttool/defaulttool/KoShapeMeshGradientHandles.h
M  +6    -4    plugins/tools/defaulttool/defaulttool/SelectionDecorator.cpp

https://invent.kde.org/graphics/krita/commit/0ebb72689133fae01b45d4d8be7b48e2595895b3
Comment 6 sh_zam 2021-11-19 16:00:34 UTC
Git commit 3fc20f9383d616d1aca4d038358e73b4263c36fb by Sharaf Zaman.
Committed on 19/11/2021 at 15:57.
Pushed by szaman into branch 'krita/5.0'.

Fix improper handle placement for mesh gradients..

..when in alternate units.
(cherry picked from commit f63ec6ef015aaf648002ad28ce88bb935842a192)

M  +9    -1    plugins/tools/defaulttool/defaulttool/KoShapeMeshGradientHandles.cpp

https://invent.kde.org/graphics/krita/commit/3fc20f9383d616d1aca4d038358e73b4263c36fb