Make Mesh Gradient handles more consistent with mesh transform

BUG:442201
(cherry picked from commit bea8ca5074d9b14d0673294e70268442abc83f4a)